--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
   position: sticky;
-
   top: 0;
-  padding: 0;
+  /* padding: 0; */
+  height: 5rem;
   width: 100%;
   z-index: 9999;
   box-sizing: border-box;
@@ -13,7 +13,8 @@
   width: 100%;
   height: 100%;
   display: flex;
-  padding: 0 3rem 0 1.8rem;
+  padding: 0.7rem 3rem 0 1.8rem;
+
   justify-content: space-between;
   align-items: center;
 }
