--- a/frontend/src/pages/HomePage/HomePage.module.css
+++ b/frontend/src/pages/HomePage/HomePage.module.css
@@ -3,298 +3,8 @@
   padding: 0 3rem;
 }
 
-/* .container {
-  margin: 0 auto;
-  padding: 1.25rem;
-}
-
-.slider {
-  width: 100%;
-  height: 40rem;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 1.8rem;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: opacity 1s ease-in-out;
-}
-
-.about {
-
-  padding: 1.6rem 1rem;
-  text-align: center;
-  margin-bottom: 2.5rem;
-  border-radius: 0.5rem;
-}
-
-.about p {
-  color: var(--color-black);
-  max-width: 43.75rem;
-  margin: 0 auto;
-  line-height: 1.5;
-}
-
-.aboutContent {
- 
-  margin: 0 auto;
-  display: flex;
-  gap: 2rem;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-.aboutText {
-  margin: 5rem 0;
-
-  text-align: justify;
-}
-
-.aboutText h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.aboutText p {
-  font-size: 1.1rem;
-  line-height: 1.6;
-  color: var(--color-black);
-}
-
-.featuresGrid {
-
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-  padding: 0.5rem 0;
-}
-
-.featureItem {
-  background: var(--color-bg);
-
-  padding: 1rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-  text-align: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  cursor: default;
-}
-
-.featureItem:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
-}
-
-.icon {
-  font-size: 2.8rem;
-  color: var(--color-light-blue);
-}
-
-.featureItem h3 {
-  font-size: 1.25rem;
-  margin-bottom: 0.5rem;
-  font-weight: 600;
-}
-
-.featureItem p {
-  font-size: 0.9rem;
-  color: #666;
-  line-height: 1.4;
-}
-
-
-.booking {
-  width: 100%;
-  background-color: var(--color-dark-blue);
-  padding: 2rem 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--color-bg);
-}
-
-.booking h3 {
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
-  text-align: center;
-  color: var(--color-bg);
-}
-
-.form {
-  width: 100%;
-  max-width: 1200px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1rem 2rem;
-  align-items: end;
-}
-
-.form label {
-  display: flex;
-  flex-direction: column;
-  text-align: start;
-  font-weight: 600;
-  font-size: 0.9rem;
-  color: var(--color-bg);
-}
-
-.form input,
-.form select {
-  margin-top: 0.5rem;
-  padding: 0.75rem;
-  border: none;
-  font-size: 1rem;
-  background-color: var(--color-bg);
-  color: var(--color-black);
-}
-
-.narrowLabel {
-  display: block;
-  max-width: 7.3rem;
-}
-
-button {
-  justify-self: end;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  box-sizing: border-box;
-}
-
-
-
-.textBox h1 {
-  color: white;
-  font-size: 3.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.textBox h2 {
-  color: white;
-  font-size: 2.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-}
-.faqSection {
-  padding: 2rem 0;
-}
-
-.faqContent {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  max-width: 100%;
-
-  gap: 2.5rem;
-  flex-wrap: nowrap;
-}
-
-.faqImage {
-  flex-shrink: 0;
-  opacity: 0;
-  transform: translateX(100%);
-  transition: transform 1s ease-out, opacity 1s ease-out;
-}
-
-.faqImageVisible {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.faqImage :global(img) {
-  width: 100%;
-  height: 25rem;
-  max-width: 45rem;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
-}
-
-.faqText {
-  flex: 1;
-  margin-top: 1rem;
-  text-align: start;
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: transform 1.5s ease-out 1s, opacity 1s ease-out 1s;
-}
-
-.faqTextVisible {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-
-.faqText h2 {
-  font-size: 1.7rem;
-  margin-bottom: 1.5rem;
-  text-align: left;
-}
-
-.faqItem {
-  margin-bottom: 1rem;
-  text-align: justify;
-}
-
-.faqItem h4 {
-  font-size: 1.1rem;
-  margin-bottom: 0.3rem;
-}
-
-.faqItem p {
-  color: #666;
-}
-
-@media (max-width: 1024px) {
-  .aboutContent {
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .aboutText,
-  .featuresGrid {
-    flex: 1 1 100%;
-  }
-
-  .featuresGrid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 600px) {
-  .featuresGrid {
-    grid-template-columns: 1fr;
-  }
-}
-
 @media (max-width: 768px) {
-  .faqContent {
-    flex-direction: column;
-    align-items: center;
+  .container {
+    padding: 0 1rem;
   }
-
-  .faqImage,
-  .faqText {
-    flex: 1 1 100%;
-    text-align: center;
-  }
-} */
+}
