--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -14,7 +14,6 @@
   height: 100%;
   display: flex;
   padding: 0.7rem 3rem 0 1.8rem;
-
   justify-content: space-between;
   align-items: center;
 }
@@ -84,6 +83,15 @@
 @media (max-width: 768px) {
   .headerLogo {
     width: 5rem;
+  }
+
+  .headerContent {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 0.7rem 1rem 0 0.5rem;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .navBar {
