--- a/frontend/src/pages/Privacy/PrivacyTermsPage.module.css
+++ b/frontend/src/pages/Privacy/PrivacyTermsPage.module.css
@@ -43,6 +43,11 @@
 
   .header {
     padding: 0.7rem;
-    margin: 1rem;
+    margin: 0;
+  }
+
+  .header h1 {
+    font-size: 1.6rem;
+    margin-left: 0.5rem;
   }
 }
