--- a/frontend/src/components/Home/HeroSlider.module.css
+++ b/frontend/src/components/Home/HeroSlider.module.css
@@ -45,7 +45,7 @@
   gap: 1rem;
 }
 
-@media (max-width: 1025px) {
+@media (min-width: 769px) and (max-width: 1025px) {
   .textBox h1 {
     font-size: 2.5rem;
   }
@@ -65,11 +65,11 @@
   }
 
   .textBox h1 {
-    font-size: 2rem;
+    font-size: 1.7rem;
   }
 
   .textBox h2 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 
   .buttons {
