--- a/frontend/src/components/Home/AboutSection.module.css
+++ b/frontend/src/components/Home/AboutSection.module.css
@@ -11,11 +11,28 @@
   margin-top: 5rem;
 }
 
+.aboutText h3 {
+  color: var(--color-dark-blue);
+  font-size: 1.6rem;
+  text-align: start;
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem;
+}
+
 .aboutContent {
   display: flex;
-  gap: 2rem;
+  /* gap: 1rem; */
   /* flex-wrap: nowrap; */
   flex-wrap: wrap;
+}
+
+.aboutContent ul {
+  list-style-type: disc;
+  margin-left: 1.8rem;
+}
+
+.aboutContent li {
+  font-weight: bold;
 }
 
 .aboutText {
@@ -24,23 +41,17 @@
 }
 
 .aboutText p {
-  max-width: 43rem;
+  max-width: 55rem;
   color: var(--color-dark-blue);
 }
 
 .schedule {
-  margin-top: 3rem;
-  font-weight: 500;
-  font-size: 1.05rem;
+  margin-top: 1.5rem;
+  margin-left: 1.8rem;
+  font-weight: 700;
+  font-size: 1.2rem;
   color: var(--color-dark-blue);
   line-height: 1.6;
-}
-
-.highlighted {
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-top: 3rem;
-  font-size: 1.1rem;
 }
 
 .featuresList {
@@ -54,10 +65,10 @@
 .featureRow {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0.5rem;
   padding: 0.3rem 0;
   position: relative;
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
 }
 
 .iconLeft {
@@ -152,6 +163,10 @@
     text-align: justify;
   }
 
+  .aboutText h3 {
+    font-size: 1.5rem;
+  }
+
   .aboutText p {
     max-width: 100%;
     color: var(--color-dark-blue);
@@ -200,8 +215,12 @@
     margin-top: 3rem;
   }
 
-  .highlighted {
-    margin-top: 1.5rem;
+  .aboutText h3 {
+    font-size: 1.3rem;
+  }
+
+  .aboutContent li {
+    font-size: 0.85rem;
   }
 
   .aboutText p {
