--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,6 @@
 }
 
 html {
-  width: 100%;
   font-size: 100%; /* 1rem = 16px */
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
@@ -16,7 +15,6 @@ html {
 }
 
 body {
-  width: 100%;
   min-height: 100vh;
   line-height: 1.5;
   color: var(--color-text);
@@ -26,6 +24,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: subpixel-antialiased;
   /* overflow-x: hidden; */
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body::-webkit-scrollbar {
@@ -76,6 +82,15 @@ p {
   /* padding: 2rem 0; */
   text-align: center;
   box-sizing: border-box;
+}
+
+#root,
+.container {
+  width: 100vw;
+  max-width: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0 auto;
 }
 
 :root {
