--- a/frontend/src/components/Home/HeroSlider.module.css
+++ b/frontend/src/components/Home/HeroSlider.module.css
@@ -77,7 +77,7 @@
   }
 } */
 
-.slider {
+/* .slider {
   width: 100%;
   height: 35rem;
   position: relative;
@@ -90,6 +90,21 @@
   object-fit: cover;
   transition: opacity 1s ease-in-out;
   cursor: pointer;
+} */
+.slider {
+  width: 100vw;
+  max-width: 100%;
+  overflow: hidden;
+  height: 35rem;
+  position: relative;
+  margin-bottom: 2.5rem;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+  object-fit: cover;
 }
 
 .overlay {
