--- a/frontend/src/components/ImagePopup/ImagePopup.module.css
+++ b/frontend/src/components/ImagePopup/ImagePopup.module.css
@@ -1,4 +1,4 @@
-.popup {
+/* .popup {
   position: fixed;
   top: 0;
   left: 0;
@@ -13,8 +13,27 @@
   z-index: 9999;
   padding: 1rem;
   box-sizing: border-box;
+} */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(10px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  overflow: hidden;
 }
-
+.mainImage {
+  max-width: 95vw;
+  max-height: 70vh;
+  object-fit: contain;
+}
 .close {
   position: absolute;
   top: 1.25rem;
@@ -26,14 +45,14 @@
   z-index: 10000;
 }
 
-.mainImage {
+/* .mainImage {
   max-height: 70vh;
   max-width: 90vh;
   object-fit: contain;
   margin-bottom: 1rem;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-}
+} */
 
 .arrowLeft,
 .arrowRight {
