--- a/frontend/src/components/Home/HeroSlider.module.css
+++ b/frontend/src/components/Home/HeroSlider.module.css
@@ -102,9 +102,10 @@
 
 .image {
   width: 100%;
-  height: auto;
-  cursor: pointer;
+  height: 100%;
   object-fit: cover;
+  transition: opacity 1s ease-in-out;
+  cursor: pointer;
 }
 
 .overlay {
