--- a/frontend/src/components/Home/HeroSlider.module.css
+++ b/frontend/src/components/Home/HeroSlider.module.css
@@ -21,7 +21,7 @@
   right: 0;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.05));
   display: flex;
   justify-content: center;
   align-items: center;
