--- a/frontend/src/components/FirstHeader/FirstHeader.module.css
+++ b/frontend/src/components/FirstHeader/FirstHeader.module.css
@@ -1,4 +1,5 @@
 .firstHeader {
+  position: relative;
   width: 100%;
   display: flex;
   align-items: center;
@@ -21,8 +22,6 @@
 .leftContact {
   display: flex;
   gap: 1.5rem;
-  /* align-items: center; */
-  /* font-size: 1rem; */
   flex-grow: 1;
   white-space: nowrap;
 }
