--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,13 +20,16 @@ body {
   color: var(--color-text);
   background-color: var(--color-bg);
   font-weight: 400;
+  /* -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: subpixel-antialiased;
+  /* overflow-x: hidden; */
 }
 
 html,
 body {
   width: 100%;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
