--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -99,6 +99,9 @@
     padding: 0.8rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 999;
+    max-width: 100vw; /* да не надмине ширина на екранот */
+    box-sizing: border-box;
+    overflow-x: hidden;
   }
   .navLink {
     font-size: 0.7rem;
