--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -8,6 +8,7 @@
 }
 
 .headerContent {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
@@ -99,10 +100,9 @@
     padding: 0.8rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 999;
-    max-width: 100vw; /* да не надмине ширина на екранот */
-    box-sizing: border-box;
-    overflow-x: hidden;
+    width: 100%;
   }
+
   .navLink {
     font-size: 0.7rem;
     text-transform: uppercase;
