--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -232,11 +232,11 @@ p {
 }
 
 @media (max-width: 480px) {
-  .pageWrapper {
+  /* .pageWrapper {
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
-  }
+  } */
 
   h1 {
     font-size: 2rem;
@@ -244,11 +244,11 @@ p {
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-  .pageWrapper {
+  /* .pageWrapper {
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
-  }
+  } */
 
   h1 {
     font-size: 2.5rem;
