--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -237,7 +237,10 @@ p {
     width: 100%;
     max-width: 100%;
   } */
-
+  html,
+  body {
+    overflow-x: hidden;
+  }
   h1 {
     font-size: 2rem;
   }
@@ -249,7 +252,10 @@ p {
     width: 100%;
     max-width: 100%;
   } */
-
+  html,
+  body {
+    overflow-x: hidden;
+  }
   h1 {
     font-size: 2.5rem;
   }
