--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -228,12 +228,22 @@ p {
   h1 {
     font-size: 2rem;
   }
+  /* html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  } */
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
   h1 {
     font-size: 2.5rem;
   }
+  /* html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  } */
 }
 
 @media (min-width: 769px) {
