--- a/frontend/src/components/ImagePopup/ImagePopup.module.css
+++ b/frontend/src/components/ImagePopup/ImagePopup.module.css
@@ -2,8 +2,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
+  width: 100%;
+  height: 100%;
   background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(10px);
   display: flex;
