--- a/frontend/src/components/ImagePopup/ImagePopup.module.css
+++ b/frontend/src/components/ImagePopup/ImagePopup.module.css
@@ -83,6 +83,7 @@
     height: 2.5rem;
   }
 } */
+
 .popup {
   position: fixed;
   top: 0;
@@ -181,16 +182,65 @@
 }
 
 @media (max-width: 768px) {
-  .mainWrapper {
-    max-width: 100%;
-    max-height: 60vh;
+  .popup {
+    width: 100vw;
+    max-height: 65vh;
+    padding-top: 5rem;
   }
+
   .arrowLeft,
   .arrowRight {
     display: none;
   }
+}
+
+/* @media (max-width: 768px) {
+  .popup {
+    justify-content: flex-start;
+    padding-top: 4rem;
+  }
+
+  .mainWrapper {
+    max-width: 100%;
+    max-height: 70vh; 
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mainImage {
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+
+  .thumbnails {
+    display: flex;
+    justify-content: center;
+    overflow-x: auto;
+    gap: 0.4rem;
+    padding: 0.5rem 0;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
   .thumb {
-    height: 2.5rem;
+    height: 2.5rem; 
+    width: auto;
+    flex-shrink: 0;
+    object-fit: cover;
+    cursor: pointer;
+    opacity: 0.6;
+    transition: 0.3s;
+    border-radius: 5px;
+  }
+
+  .thumb:hover,
+  .active {
+    opacity: 1;
+    border: 2px solid #004059;
   }
 }
 
@@ -202,4 +252,4 @@
   .thumb {
     height: 2rem;
   }
-}
+} */
