--- a/frontend/src/components/ImagePopup/ImagePopup.module.css
+++ b/frontend/src/components/ImagePopup/ImagePopup.module.css
@@ -272,7 +272,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
@@ -365,7 +365,7 @@
   opacity: 1;
   border: 2px solid #004059;
 }
-/* === MOBILE === */
+
 @media (max-width: 768px) {
   .popup {
     justify-content: flex-start;
