--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -239,11 +239,11 @@ p {
   h1 {
     font-size: 2.5rem;
   }
-  /* html,
+  html,
   body {
     max-width: 100%;
     overflow-x: hidden;
-  } */
+  }
 }
 
 @media (min-width: 769px) {
