--- a/frontend/src/components/ImagePopup/ImagePopup.module.css
+++ b/frontend/src/components/ImagePopup/ImagePopup.module.css
@@ -53,7 +53,7 @@
   top: 50%;
   transform: translateY(-50%);
   font-size: 2rem;
-  background: rgba(0, 0, 0, 0.4);
+  background: #004059;
   border: none;
   color: #fff;
   cursor: pointer;
